log/build_2026-01-30_22-20-32/detections_2d/stderr.log
  File "/ws/install/detections_2d/lib/python3.10/site-packages/detections_2d/batch_2d.py", line 1
    mport rclpy
          ^^^^^
SyntaxError: invalid syntax

